// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceWizardSummary component should render correctly amazon - ARN 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Application
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Not selected
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Amazon Web Services
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Authentication type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      ARN
    </TextListItem>
    <TextListItem
      component="dt"
    >
      S3 bucket name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      -
    </TextListItem>
    <TextListItem
      component="dt"
    >
      ARN
    </TextListItem>
    <TextListItem
      component="dd"
    >
      123456
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly amazon 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Application
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Not selected
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Amazon Web Services
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Authentication type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      AWS Secret Key
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Access key ID
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Secret access key
    </TextListItem>
    <TextListItem
      component="dd"
    >
      ●●●●●●●●●●●●
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly ansible-tower 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Application
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Not selected
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Ansible Tower
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Authentication type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Username and password
    </TextListItem>
    <TextListItem
      component="dt"
    >
      User name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Secret Key
    </TextListItem>
    <TextListItem
      component="dd"
    >
      ●●●●●●●●●●●●
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Hostname
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Verify SSL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Certificate authority
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly hide application 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Ansible Tower
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Authentication type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Username and password
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Username
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Password
    </TextListItem>
    <TextListItem
      component="dd"
    >
      ●●●●●●●●●●●●
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Hostname
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Verify SSL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Certificate authority
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly openshift 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Application
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Not selected
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      OpenShift Container Platform
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Authentication type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Token
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Token
    </TextListItem>
    <TextListItem
      component="dd"
    >
      ●●●●●●●●●●●●
    </TextListItem>
    <TextListItem
      component="dt"
    >
      URL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Verify SSL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
    <TextListItem
      component="dt"
    >
      SSL Certificate
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
  </TextList>
</TextContent>
`;

exports[`SourceWizardSummary component should render correctly selected Catalog application, is second 1`] = `
<TextContent>
  <TextList
    component="dl"
  >
    <TextListItem
      component="dt"
    >
      Name
    </TextListItem>
    <TextListItem
      component="dd"
    >
      openshift
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Application
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Catalog
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Source type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Ansible Tower
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Authentication type
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Username and password
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Username
    </TextListItem>
    <TextListItem
      component="dd"
    >
      user_name
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Password
    </TextListItem>
    <TextListItem
      component="dd"
    >
      ●●●●●●●●●●●●
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Hostname
    </TextListItem>
    <TextListItem
      component="dd"
    >
      neznam.cz
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Verify SSL
    </TextListItem>
    <TextListItem
      component="dd"
    >
      Yes
    </TextListItem>
    <TextListItem
      component="dt"
    >
      Certificate authority
    </TextListItem>
    <TextListItem
      component="dd"
    >
      authority
    </TextListItem>
  </TextList>
</TextContent>
`;
